#eba-30 state: fixed flow out features on small screen

--- a/source/stylesheets/sobr/sobr.css.sass
+++ b/source/stylesheets/sobr/sobr.css.sass
@@ -310,7 +310,6 @@ ul#main_slider, ul#main_slider li
   border-top: 1px solid #9f9fa0
   border-bottom: 1px solid #d9d8d7
   color: #414042
-  margin: 0
   padding: 40px 0 50px
   text-align: center
 
